refactor: generate managed game launchers